update sales
